# telemetry_app

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  init-db.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  ff11f4f4230d_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  dto.py  health.py
backend/app/api/devices/: __init__.py  routes.py
backend/app/api/ingest/: __init__.py  routes.py
backend/app/api/realtime/: __init__.py  routes.py
backend/app/config/: __init__.py  logging.py  settings.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  device.py  reading.py
backend/app/domain/value_objects/: __init__.py  metrics.py  time_range.py
backend/app/infrastructure/database/: __init__.py  connection.py  models.py
backend/app/infrastructure/websocket/: __init__.py  manager.py
backend/app/repositories/: __init__.py  device_repository.py  reading_repository.py
backend/app/services/: __init__.py  aggregation_service.py  device_service.py  ingestion_service.py
backend/scripts/: init-db.sql
backend/src/telemetry_backend/: main.py
backend/src/telemetry_backend/api/: dependencies.py  dto.py  health.py
backend/src/telemetry_backend/config/: __init__.py  logging.py  settings.py
backend/tests/: conftest.py  test_api.py  test_domain.py  test_ingestion_service.py
(+141 files in other folders)
